samples/_failures_safe/1761651514_c9a04f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4de94a74.c: In function ‘main’:
./samples/SAFE/__tmp_4de94a74.c:138:11: error: expected ‘;’ at end of input
  138 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_4de94a74.c:138:5: error: expected declaration or statement at end of input
  138 |     printf
      |     ^~~~~~
